# articubot_one

./: CMakeLists.txt  articubot_one.xml  package.xml
config/: my_controllers.yaml
description/: lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
hardware/: diffbot_system.cpp
hardware/include/articubot_one/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
launch/: view_robot.launch.py
